# dodemansknop

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.yaml  dodemansknop.json  dodemansknop.yaml  rustfmt.toml
.github/workflows/: docker-publish.yml  rust.yml
src/: config.rs  main.rs  notifier.rs
src/filters/: mod.rs
src/handlers/: mod.rs
src/notifiers/: slack.rs  webhook.rs
