[package]
name = "dodemansknop"
version = "1.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
warp = "0.3.3"
timer = "0.2.0"
chrono = "0.4.23"
log = "0.4.17"
env_logger = "0.10.0"
config = "0.13.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
futures = "0.3.26"
clap = { version = "4.0.18", features = ["derive"] }
anyhow = "1.0.69"
